Production deployment: Settings.py güncellemeleri, log klasörü düzeltmesi, database ayarları, SSL sertifika talimatları, deployment dokümantasyonu, requirements.txt güncellemesi (Django 4.2, Pillow 10.x)

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ db.sqlite3-journal
 /media
 /staticfiles
 /static
+/logs
 
 # IDE
 .vscode/
@@ -75,4 +76,5 @@ coverage.xml
 .mypy_cache/
 .dmypy.json
 dmypy.json
+
 
