--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,17 +1,15 @@
 # Nginx configuration for kutahyaaricilarbirligi.com
 # Bu dosyayı /etc/nginx/sites-available/kutahyaaricilarbirligi şeklinde kopyalayın
 # ve /etc/nginx/sites-enabled/ içine symlink oluşturun
+# 
+# Sunucu IP: 37.148.208.77
+# Domain: kutahyaaricilarbirligi.com
 
 # HTTP'den HTTPS'e yönlendirme
 server {
     listen 80;
     listen [::]:80;
     server_name kutahyaaricilarbirligi.com www.kutahyaaricilarbirligi.com;
-    
-    # Let's Encrypt için
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
     
     # Tüm trafiği HTTPS'e yönlendir
     location / {
@@ -25,9 +23,18 @@ server {
     listen [::]:443 ssl http2;
     server_name kutahyaaricilarbirligi.com www.kutahyaaricilarbirligi.com;
 
-    # SSL Sertifikaları
-    ssl_certificate /etc/letsencrypt/live/kutahyaaricilarbirligi.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/kutahyaaricilarbirligi.com/privkey.pem;
+    # SSL Sertifikaları - Mevcut sertifikanızın yolunu buraya yazın
+    # Örnek yollar (sertifikanızın gerçek yolunu kullanın):
+    # ssl_certificate /etc/ssl/certs/kutahyaaricilarbirligi.com.crt;
+    # ssl_certificate_key /etc/ssl/private/kutahyaaricilarbirligi.com.key;
+    # VEYA
+    # ssl_certificate /path/to/your/certificate.crt;
+    # ssl_certificate_key /path/to/your/private.key;
+    
+    # SSL sertifika yollarınızı aşağıdaki satırlara yazın:
+    # ÖNEMLİ: Aşağıdaki yolları kendi sertifika dosyalarınızın yollarıyla değiştirin!
+    ssl_certificate /etc/ssl/certs/kutahyaaricilarbirligi.com.crt;
+    ssl_certificate_key /etc/ssl/private/kutahyaaricilarbirligi.com.key;
     
     # SSL Ayarları
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -78,4 +85,5 @@ server {
         proxy_set_header Connection "upgrade";
     }
 }
+
 
