--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-django>=5.0,<6.0
+Django>=4.2,<5.0
 gunicorn>=23.0.0
 whitenoise>=6.7.0
 psycopg2-binary>=2.9.10
-Pillow>=12.0.0
-django-ckeditor>=6.7.0
-
-
+Pillow>=10.0.0,<11.0.0
+django-ckeditor
