Production deployment hazırlığı: Settings.py güncellemeleri, log klasörü düzeltmesi, database ayarları, SSL sertifika talimatları, deployment dokümantasyonu

--- a/deploy/gunicorn.service
+++ b/deploy/gunicorn.service
@@ -6,6 +6,7 @@ After=network.target
 User=www-data
 Group=www-data
 WorkingDirectory=/var/www/kutahyaaricilarbirligi
+EnvironmentFile=/var/www/kutahyaaricilarbirligi/.env
 ExecStart=/var/www/kutahyaaricilarbirligi/venv/bin/gunicorn \
     --access-logfile - \
     --workers 3 \
